Build basic links service and routing.

--- a/client/app/links/links.html
+++ b/client/app/links/links.html
@@ -1,3 +1,7 @@
 <div id='container'>
   <!-- Your html here -->
+  <li class="link" ng-repeat="link in data.links">
+    {{link.title}} - {{link.visits}}
+    <a href="{{link.url}}">localhost:8000/api/links/{{link.code}}<a/>
+  </li>
 </div>
