--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -1,8 +1,8 @@
 <div id='signin'>
   <h1>signin</h1>
   <form name="signinForm" ng-submit='signin()'>
-    <input type='text' ng-model='user.username'>
-    <input type="password" ng-model='user.password'>
+    <input type='text' ng-model='user.username' ng-minlength="3" ng-maxlength="8">
+    <input type="password" ng-model='user.password' ng-minlength="3" ng-maxlength="8">
     <button>signin</button>
   </form>
   <a href="#/signup">Don't have an account? Signup ...</a>
